<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true" />
    <ListPreference
        android:key="@string/pref_temprature_key"
        android:title="@string/pref_temprature_label"
        android:summary="@string/pref_temprature_summary"
        android:defaultValue="@string/pref_temprature_metric"
        android:entries="@array/pref_temprature_array_entries"
        android:entryValues="@array/pref_temprature_array_values"
        />

</PreferenceScreen>